--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -295,7 +295,7 @@
      "output_type": "stream",
      "text": [
       "Buscando dados do IGP-M no Banco Central...\n",
-      "Todos os valores serão corrigidos para a data de referência: May de 2025\n",
+      "Todos os valores serão corrigidos para a data de referência: June de 2025\n",
       "Juntando o fator de correção aos dados dos imóveis...\n",
       "Calculando os valores corrigidos...\n",
       "\n",
@@ -337,45 +337,45 @@
        "      <td>2008</td>\n",
        "      <td>1</td>\n",
        "      <td>879448.67</td>\n",
-       "      <td>2.801609e+06</td>\n",
+       "      <td>2.754822e+06</td>\n",
        "      <td>2555.868145</td>\n",
-       "      <td>8142.080963</td>\n",
+       "      <td>8006.108211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2008</td>\n",
        "      <td>1</td>\n",
        "      <td>268636.27</td>\n",
-       "      <td>8.557790e+05</td>\n",
+       "      <td>8.414875e+05</td>\n",
        "      <td>1220.241971</td>\n",
-       "      <td>3887.254100</td>\n",
+       "      <td>3822.336957</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2008</td>\n",
        "      <td>1</td>\n",
        "      <td>361120.91</td>\n",
-       "      <td>1.150402e+06</td>\n",
+       "      <td>1.131190e+06</td>\n",
        "      <td>2119.005457</td>\n",
-       "      <td>6750.392827</td>\n",
+       "      <td>6637.661267</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2008</td>\n",
        "      <td>1</td>\n",
        "      <td>365503.88</td>\n",
-       "      <td>1.164365e+06</td>\n",
+       "      <td>1.144920e+06</td>\n",
        "      <td>1261.532737</td>\n",
-       "      <td>4018.791699</td>\n",
+       "      <td>3951.677878</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2008</td>\n",
        "      <td>1</td>\n",
        "      <td>311473.00</td>\n",
-       "      <td>9.922415e+05</td>\n",
+       "      <td>9.756710e+05</td>\n",
        "      <td>2166.617974</td>\n",
-       "      <td>6902.069263</td>\n",
+       "      <td>6786.804706</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -383,18 +383,18 @@
       ],
       "text/plain": [
        "   Ano Avaliacao  Mes Avaliacao      preco  preco_corrigido     valor_m2  \\\n",
-       "0           2008              1  879448.67     2.801609e+06  2555.868145   \n",
-       "1           2008              1  268636.27     8.557790e+05  1220.241971   \n",
-       "2           2008              1  361120.91     1.150402e+06  2119.005457   \n",
-       "3           2008              1  365503.88     1.164365e+06  1261.532737   \n",
-       "4           2008              1  311473.00     9.922415e+05  2166.617974   \n",
+       "0           2008              1  879448.67     2.754822e+06  2555.868145   \n",
+       "1           2008              1  268636.27     8.414875e+05  1220.241971   \n",
+       "2           2008              1  361120.91     1.131190e+06  2119.005457   \n",
+       "3           2008              1  365503.88     1.144920e+06  1261.532737   \n",
+       "4           2008              1  311473.00     9.756710e+05  2166.617974   \n",
        "\n",
        "   valor_m2_corrigido  \n",
-       "0         8142.080963  \n",
-       "1         3887.254100  \n",
-       "2         6750.392827  \n",
-       "3         4018.791699  \n",
-       "4         6902.069263  "
+       "0         8006.108211  \n",
+       "1         3822.336957  \n",
+       "2         6637.661267  \n",
+       "3         3951.677878  \n",
+       "4         6786.804706  "
       ]
      },
      "execution_count": 5,
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "00c2729c",
    "metadata": {},
    "outputs": [],
@@ -962,8 +962,8 @@
     "    itbi,\n",
     "    target,\n",
     "    search_space,\n",
-    "    result_set_size=10,  # Queremos os 10 melhores subgrupos\n",
-    "    depth=3,             # Profundidade máxima da descrição (ex: Bairro='SAVASSI' AND Tipo_Imovel='APARTAMENTO')\n",
+    "    result_set_size=10,  # 10 melhores subgrupos\n",
+    "    depth=3,             # Profundidade máxima da descrição \n",
     "    qf=quality_function\n",
     ")\n",
     "\n",
